--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,13 @@ cmake_minimum_required(VERSION 3.7)
 
 project(BasicVulkan++ LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(Vulkan REQUIRED)
 find_package(SDL2 REQUIRED)
+find_package(glfw3 REQUIRED)
 
 include_directories(${CMAKE_PROJECT_NAME} ${SDL2_INCLUDE_DIRS})
 
@@ -21,3 +22,4 @@ add_executable(
 
 target_link_libraries(${CMAKE_PROJECT_NAME} Vulkan::Vulkan)
 target_link_libraries(${CMAKE_PROJECT_NAME} ${SDL2_LIBRARIES})
+target_link_libraries(${CMAKE_PROJECT_NAME} glfw)
