--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "ostream": "cpp",
         "iostream": "cpp",
         "vector": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "exception": "cpp",
+        "new": "cpp"
     }
 }
