--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(Vulkan REQUIRED)
 find_package(SDL2 REQUIRED)
 find_package(glfw3 REQUIRED)
+find_package(fmt REQUIRED)
 
 include_directories(${CMAKE_PROJECT_NAME} ${SDL2_INCLUDE_DIRS})
 
@@ -23,3 +24,4 @@ add_executable(
 target_link_libraries(${CMAKE_PROJECT_NAME} Vulkan::Vulkan)
 target_link_libraries(${CMAKE_PROJECT_NAME} ${SDL2_LIBRARIES})
 target_link_libraries(${CMAKE_PROJECT_NAME} glfw)
+target_link_libraries(${CMAKE_PROJECT_NAME} fmt)
