--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,5 +72,5 @@
         "typeindex": "cpp",
         "valarray": "cpp"
     },
-    "C_Cpp.errorSquiggles": "enabled"
+    "C_Cpp.errorSquiggles": "disabled"
 }
